# golden-shoe

./: README.md
client/: .gitignore  .prettierrc  README.md  package.json  server-config.ts
client/components/: Cart.tsx  Footer.tsx  Modal.tsx  Navbar.tsx
client/helpers/: api.ts
client/pages/: _app.tsx  contact.tsx  index.tsx
client/types/: types.ts
server/: README.md  pyproject.toml
server/server/: README.md  db.sqlite3
server/server/product/: models.py  serializers.py  urls.py  views.py
server/server/product/migrations/: 0001_initial.py
server/server/product/products/men/: 1.json  2.json  3.json  4.json
server/server/product/products/women/: 1.json  2.json  3.json  4.json
server/server/server/: settings.py  urls.py
server/server/smtp/: models.py  serializers.py  urls.py  views.py
server/server/smtp/migrations/: 0001_initial.py  0002_contactform_delete_item.py  0003_icontactform_delete_contactform.py  0004_rename_icontactform_contactform.py  0005_alter_contactform_is_send_copy_enabled.py  0006_alter_contactform_is_send_copy_enabled.py  0007_rename_is_send_copy_enabled_contactform_issendcopyenabled.py
